apps-proof/bugsink/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bugsink
  labels:
    or2.stumason.dev/app: "true"
