apps-proof/bugsink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugsink
  namespace: bugsink
spec:
  selector:
    app: bugsink
  ports:
    - name: http
      port: 80
      targetPort: http
