apps-proof/bugsink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugsink
  namespace: bugsink
spec:
  ingressClassName: traefik
  rules:
    - host: "bugsink${HOST_SUFFIX}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bugsink
                port:
                  name: http
